--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,109 @@
-.App {
-  text-align: center;
+/* ====== ESTILOS GENERALES ====== */
+/* Fondo de la página */
+body {
+  background-image: url("../public/fondo.jpg");
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Posicionamiento del logo */
+.logo {
+  position: absolute;
+  left: 1800px;
+  top: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Animación de cambio de color en el header */
+@keyframes color-rgb {
+  0%   { color: rgb(255, 0, 0); }     /* Rojo */
+  25%  { color: rgb(0, 255, 0); }     /* Verde */
+  50%  { color: rgb(0, 0, 255); }     /* Azul */
+  75%  { color: rgb(255, 255, 0); }   /* Amarillo */
+  100% { color: rgb(255, 0, 0); }     /* Rojo */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+header {
+  animation: color-rgb 2.5s infinite;
+}
+
+/* Texto blanco para elementos específicos */
+.titulo,
+.cabezera,
+.parrafo,
+.texto_Blanco {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+/* ====== Navegacion ====== */
+/* Estilo de enlaces en la navegación */
+header li a {
+  text-decoration: none;
+  list-style: none;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Contenedor de navegación */
+nav ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  gap: 2rem;
 }
+/* ====== Carátula / Sección Principal ====== */
+/* Centrado del título */
+.titulo {
+  display: flex;
+  justify-content: center;
+}
+
+/* Estilo de las secciones principales */
+section {
+  display: flex;
+  margin: 30px;
+  padding: 50px;
+  gap: 10px;
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+}
+/* Formularios/Inicio de sesion*/
+/* Margen general para contenedores */
+.marge {
+  margin: 50px 50px 50px 0;
+}
+
+/* Espaciado entre campos del formulario */
+.from-group {
+  margin-bottom: 15px;
+  color: blue;
+}
+
+/* Fondo del contenedor del formulario */
+.contenedor {
+  background-color: rgb(0, 0, 0);
+}
+/* Footer */
+.footer {
+  position: relative;
+  top: 350px;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  color: white;
+  text-align: center;
+  line-height: 50px;
+}
+/* Efectos hover/zoom */
+/* Preparación para efecto hover */
+.hover-zoom {
+  transition: transform 0.3s ease, filter 0.4s ease;
+  border-radius: 10px;
+}
+
+/* Efecto al pasar el cursor */
+.hover-zoom:hover {
+  transform: scale(1.2);
+  filter: brightness(1.2);
+}
+
+
